--- a/Develop/index.html
+++ b/Develop/index.html
@@ -67,7 +67,7 @@
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-
+      <!--Added hours 12-5 to div hours-->
       <div id="hour-12" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
